Search functionality on School and Users implemented

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
 			<table class="table" id="book_table">
 	            <thead>
 	                <tr>
-	            		<th><%= link_to :All, 'javascript:checkAllBooks()', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAllBooks()', :class => "lnk-typ2" %></th>
+	            		<th><%= link_to :All, 'javascript:checkAll("book")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("book")', :class => "lnk-typ2" %></th>
                     	<th>Title</th>
                     	<th>Author</th>
                     	<th>Description</th>
