--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 		<!-- <li id="li_dashboard"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li> -->
 		 <!-- <span class="arrow arrw-pos" container_li="li_dashboard"></span> -->
 		
-		<% if current_user.is_web_admin?%>
+		<% if current_user && current_user.is_web_admin?%>
 		<li class="nav-parent" id="li_school"><a href=""><i class="glyphicon glyphicon-book"></i> <span>School</span></a>
 			<span class="arrow arrw-pos" container_li="li_school"></span>
         <ul class="children">
@@ -132,11 +132,11 @@
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-				<% if current_user.role.name.eql?('Web Admin')%>  
+				<% if current_user && current_user.role.name.eql?('Web Admin')%>  
 				    <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id) %></li>  
 				<%else%>
 				    <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id, :school_id=>current_user.school_id) %></li>  
-				<%end%>
+				<%end if current_user  %>
 				<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i>'.html_safe + "Log Out", signout_path, method: :delete %></li>
               </ul>
             </div>
