--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,13 @@
-<%= form_tag 'users/delete_user' do %>
+
   <div class="panel panel-default">
 	<div class="panel-body"> 
+		<%= text_field_tag :text_field_search %>
+		<%#=link_to "Search", "#", :class=>"" , :id => "search" %>
+
+		<button class="btn btn-primary btn-xs" id="user_search" >
+						    Search
+		</button>
+		<%= form_tag 'users/delete_user' do %>
 	  <div class="index_page_btns" data-no-turbolink>
 		<% if @role_id.name.eql?('Web Admin')%>
 		    <% if can? :create, :users %>
@@ -31,7 +38,7 @@
 		<table class="table class_common_table" id="users_table">
             <thead>
                 <tr>
-                	<th><%= link_to :All, 'javascript:checkAllUsers()', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAllUsers()', :class => "lnk-typ2" %></th>
+                	<th><%= link_to :All, 'javascript:checkAll("user")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("user")', :class => "lnk-typ2" %></th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
@@ -50,7 +57,7 @@
 				 <% @users.each do |user| %>
 				     <% unless user.id == current_user.id%>
                          <tr class="odd gradeX" data-no-turbolink>
-                 	         <td class=""><%= check_box_tag 'user_ids[]', user.id, false, :class => "check-box" %></td>
+                 	         <td class=""><%= check_box_tag 'user_ids[]', user.id, false, :class => "user-check-box" %></td>
 							 <%unless @role_id.name.eql?('Web Admin')%>
                                  <td class=""><%= link_to user.first_name, user_path(user, :role_id => @role_id, :school_id=>@school.id), :title=>"View User Details" %></td>
 							 <%else%>
@@ -109,8 +116,9 @@
 	<div data-no-turbolink>
 		<%= paginate @users %>
 	</div>
+	<% end %>
  </div>		  
-<% end %>
+</div>
 
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
