--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -36,7 +36,7 @@
 	            </thead>
 	            <tbody>
 					<% @schools.try(:each) do |school| %>
-		                <tr class="odd gradeX">
+		                <tr class="odd gradeX" data-no-turbolink>
 		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
 		                  <td class=""><%= school.code %></td>
 		                  <td class=""><%= link_to school.name, school_path(school), :title=>"View School Details" %></td>
