--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -2,6 +2,7 @@
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 			<%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
+			<%= hidden_field_tag :role_id, params[:role_id]%>
 	            <div class="panel-body">
 	        	    <div class="row">
 		                <div class="col-sm-6">
