--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -11,10 +11,10 @@
 				    <%=f.hidden_field :school_id, :value=>@school.id%>
 				    <% if @school.errors.any? %>
 				    <div id="error_explanation">
-				        <h4><%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h4>
+				        <!-- <h4><%#= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h4> -->
 				        <ul>
 				            <% @school.errors.full_messages.each do |msg| %>
-				                <li><%= msg %></li>
+				                <%= msg %>
 				            <% end %>
 				        </ul>
 				    </div>
