--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -5,7 +5,7 @@
 		<%= text_field_tag :text_field_search %>
 		<%#=link_to "Search", "#", :class=>"" , :id => "search" %>
 
-		<button class="btn btn-primary btn-xs" id="search" >
+		<button class="btn btn-primary btn-xs" id="school_search" >
 						    Search
 						    </button>
 
