--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -79,10 +79,11 @@
 	        	</tbody>
 	    	</table>
 		</div>
-
+        <% if @schools.count && @schools.count > 1 %>
 		<div data-no-turbolink>
 			<%= paginate @schools %>
-		</div>	
+		</div>
+		<% end %>	
 	<% end %>
 	</div>	
 </div>	  
