--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -68,4 +68,7 @@
 
 <script type="text/javascript">
 showHideMenu('li_school');
+<% unless current_user.is_web_admin?%>
+  showHideMenu('li_options');	
+<%end%>
 </script>
