--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -82,9 +82,9 @@
 	  		        <div class="row">
 	                      <div class="col-sm-9">
 	                          <div class="form-group">
-	                              <div style="float:left;" id="assigned_div">
-									  <%= label_tag "teachers", "Teachers", :class=>"control-label" %>
-	                                  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+	                              <%= label_tag "teachers", "Teachers", :class=>"control-label form-lable-multiselect" %>
+								  <div style="float:left;" id="assigned_div">
+									  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                              <div class="assign_arrows">
 	                                  <a href="#Remove" class="remove"> Remove >> </a><br />
@@ -100,8 +100,8 @@
   	  		        <div class="row">
   	                      <div class="col-sm-9">
   	                          <div class="form-group">
+								  <%= label_tag "studnts", "Students", :class=>"control-label form-lable-multiselect" %>
   	                              <div style="float:left;" id="student_assigned_div">
-									  <%= label_tag "studnts", "Students", :class=>"control-label" %>
   	                                  <%= select_tag "student_assigned_id", options_from_collection_for_select(@assigned_students, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
   	                              </div>
   	                              <div class="assign_arrows">
@@ -125,6 +125,10 @@
 
 <script type="text/javascript">
 	showHideMenu('li_school');
+	
+	<% unless current_user.is_web_admin?%>
+	  showHideMenu('li_options');	
+	<%end%>
 	
 	// Assign student to a classroom, multi select
 	    $(function () {
