--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -33,7 +33,8 @@
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 		   			    	<%= f.label :email, :class=>"control-label"%><span class="asterisk">*</span>
-		   			    	<%= f.text_field :email, :class=>"form-control email_validation" %>
+		   			    	<%= f.text_field :email, :class=>"form-control" %>
+							<%#= f.text_field :email, :class=>"form-control email_validation" %>
 							<span class="help-inline error_box"></span>
 	                    </div>
 	                </div>
@@ -140,8 +141,8 @@
 		        <div class="row">
                     <div class="col-sm-9">
                         <div class="form-group">
+							<%= label_tag 'classrooms', "Classrooms", :class=>"control-label form-lable-multiselect"%>
                             <div style="float:left;" id="assigned_div">
-								<%= label_tag 'classrooms', "Classrooms", :class=>"control-label"%>
                                 <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
                             </div>
                             <div class="assign_arrows">
