--- a/app/views/accessrights/_form.html.erb
+++ b/app/views/accessrights/_form.html.erb
@@ -18,7 +18,7 @@
 							<%end%>
 						</div>
                     </div>
-                </div>
+                </div><br>
 				<h4 class="semi-bold">Access Rights</h4>
 				<div class="row">
 			    	<div class="col-md-12">
