--- a/app/views/schools/_license_list.html.erb
+++ b/app/views/schools/_license_list.html.erb
@@ -28,7 +28,7 @@
 					        <td class=""><%= lic.users.school_admins.count %></td>
 					        <td class=""><%= lic.users.teachers.count %></td>
 					        <td class=""><%= lic.users.students.count %></td>
-                            <td><%= text_field_tag "license_expiry_date[#{lic.id}]",lic.expiry_date ,:class=>"form-control datepicker", :placeholder=>"yyyy-mm-dd" %></td>
+                            <td><%= text_field_tag "license_expiry_date[#{lic.id}]",lic.expiry_date ,:class=>"form-control datepicker", :placeholder=>"yyyy-mm-dd", :readonly=>true%></td>
                         </tr>
 				   <% end %>
                 </tbody>
@@ -43,7 +43,8 @@
 </div>
 <script>
     jQuery(document).ready(function(){
-      $('.datepicker').datepicker({ dateFormat: 'yy-mm-dd' }).val();
+      $('.datepicker').datepicker({ dateFormat: 'yy-mm-dd',minDate: 0 }).val();
+	  
     //   $('.license-check-box').change(function () {
     //     var check = ($('.license-check-box').filter(":checked").length == $('.license-check-box').length);
     //     $('.select-all-licenses').prop("checked", check);
