--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,9 @@
 
 .pageheader .btg { font-size: 24px; margin-right: 5px;padding: 6px 7px; border: 2px solid #1D2939; -moz-border-radius: 50px;-webkit-border-radius: 50px; border-radius: 50px; }
 .pageheader .btg-lisence:before{vertical-align: top;}
+.pageheader .btg-admin:before{vertical-align: top;}
+.pageheader .btg-teacher:before{vertical-align: top;}
+.pageheader .btg-student:before{vertical-align: top;}
 //table td {border:solid 1px #fab; width:100px; word-wrap:break-word;}
 //a, button {margin:2px;}
 
