--- a/app/views/licenses/edit.js.erb
+++ b/app/views/licenses/edit.js.erb
@@ -3,6 +3,9 @@ $('#datepicker').datepicker({
 	dateFormat: 'yy-mm-dd',
     minDate: 0		 
 }).val();
+$('.input-group-addon').click(function() {
+	$("#datepicker").datepicker( "show" );
+});
 
 $(document).ready(function(){
 	$(".form_validation").validate({
