added css for modal

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -114,8 +114,8 @@
       </div>
       <div class="modal-body sample_list_links_div">
 		  <div id="school_admin">
-		  		<%=link_to 'Download Sample', download_school_list_schools_path(:format => :xls), :class=>"btn btn-success btn-xs"%>
-		  		<%=link_to 'Download Sample', download_school_list_schools_path(:format => :csv), :class=>"btn btn-success btn-xs"%>
+		  		<%=link_to 'Download xls format sample', download_school_list_schools_path(:format => :xls), :class=>"btn btn-success btn-xs"%>
+		  		<%=link_to 'Download csv format sample', download_school_list_schools_path(:format => :csv), :class=>"btn btn-success btn-xs"%>
 		  </div>
 	  </div>
       <!-- <div class="modal-footer">
