--- a/app/views/users/_parent_fields.html.erb
+++ b/app/views/users/_parent_fields.html.erb
@@ -1,4 +1,4 @@
-				<fieldset>
+				<fieldset class="fieldset-parents">
 				<div class="row">
 	                <div class="col-sm-3">
 	                    <div class="form-group">
