--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,8 +82,8 @@ label.error {display:block;}
 	.school-table tr th:nth-child(8){width:20%;}
 
 /* Fieldset */
-	.fieldset-parents{height:78px;}
-	.fieldset-parents + a{ margin-bottom:20px; display:block;}
+	.fieldset-parents{height:110px;}
+	.add-parent{ margin-bottom:20px; display:block;}
 	.add-student-label{padding-right:10px;}
 
 /* Student profile pic */
