--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -82,8 +82,9 @@
 	        	    <%=f.fields_for :parents,@parent do |fb|%>     
 	        		    <%=render 'parent_fields', f: fb%>
 	        	    <%end%>
+					<div class="add-parent">
 				    <%= link_to_add_fields "Add More Parent Details", f, :parents %>
-			   	
+				</div>
 				<div class="row">
 	            	<div class="col-sm-3">
 	                	<div class="form-group">
