changed few messages and solved few issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,3 +88,7 @@ label.error {display:block;}
 
 /* Student profile pic */
 	.student-profil-pic{width:100px; border-radius:100px; margin-bottom:10px;}
+	
+.no-access{width:100%; min-height:850px; background:#fff;}
+.no-access img {padding-top:100px;}	
+	
