--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
             	</address>
             	
 			    <div data-no-turbolink>
-			        <%= link_to 'Cancel', new_book_path, class: "btn btn-white btn-xs"%>
+			        <%= link_to 'Return to Book List', new_book_path, class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
         </div>
