--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,40 +46,58 @@
           <ul class="children">
           <% if can? :create, :schools %>
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
-        <%end%>
-        <% if can? :read, :schools %>
+          <%end%>
+          <% if can? :read, :schools %>
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
-       <%end%>
-         </ul>
-        </li>
-    
+          <%end%>
+          </ul>
+    </li>
     <li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "Web Admin", root_path %>
       <span class="arrow arrw-pos" container_li="li_webadmin"></span>
           <ul class="children">
-       <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Web Admin", new_user_path(:role_id =>Role.where("name='Web Admin'").last) %></li>
-       <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Web Admin Listing", users_path(:role_id => Role.where("name='Web Admin'").last) %></li>
-          </ul>
-        </li>
-
-        <li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-book"></i>'.html_safe + "Books", books_path %>
+		    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Web Admin", new_user_path(:role_id =>Role.where("name='Web Admin'").last) %></li>
+		    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Web Admin List", users_path(:role_id => Role.where("name='Web Admin'").last) %></li>
+         </ul>
+    </li>
+    <li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-book"></i>'.html_safe + "Books", books_path %>
          <ul class="children">
-          <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Book List", books_path %></li>
-         <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
+		   <% if can? :create, :books %>
+		     <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
+		   <%end%>
+		   <% if can? :read, :books %>
+		     <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Book List", books_path %></li>
+		   <%end%>
        </ul>
       </li>
     
     <li class="nav-parent" id="li_accessright"><a href=""><i class="glyphicon glyphicon-ban-circle"></i> <span>Access Rights</span></a>
       <span class="arrow arrw-pos" container_li="li_accessright"></span>
           <ul class="children">
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Assign Access Right", new_accessright_path %></li>
-            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
-          </ul>
+			<% if can? :update, :accessrights %>  
+              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Assign Access Right", new_accessright_path %></li>
+			<%end%>  
+            <% if can? :read, :accessrights %>
+			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
+            <%end%>
+		  </ul>
         </li>
     
     <%else%>
     <li class="nav-parent" id="li_options"><a href=""><i class="fa fa-chevron-circle-down"></i> <span>Options</span></a>
       <span class="arrow arrw-pos" container_li="li_options"></span>
           <ul class="children">
+	  <% if can? :update, :accessrights %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Assign Access Right", new_accessright_path %></li>
+	  <%end%>  
+      <% if can? :read, :accessrights %>
+	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
+      <%end%>		  
+	  <% if can? :create, :books %>
+	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Book", new_book_path %></li>
+	  <%end%>
+	  <% if can? :read, :books %>
+	        <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Book List", books_path %></li>
+	  <%end%>  		  
       <% if (can? :create, :users) && (can? :create_sa, :users) %>  
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School Admin", new_user_path(:role_id =>Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
       <%end%>
