--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,1 +1,1 @@
-<div class="text-center"><%= image_tag("coming-soon1.jpg")%></div>
+<div class="text-center no-access"><%= image_tag("not-authorised.png")%></div>
