--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -35,7 +35,7 @@
             	</address>
             	<div data-no-turbolink>
 			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
-					<%= link_to 'Cancel', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
+					<%= link_to 'Return to Classroom List', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
         </div>
