--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -23,7 +23,7 @@
 	                </div>
 	                <div class="col-sm-3">
 	                    <div class="form-group">
-	                    	<%= f.label :phone_number, "", :class=>"control-label" %>
+	                    	<%= f.label :phone_number, "Phone Number", :class=>"control-label" %>
 		    			    <%= f.text_field :phone_number, :class=>"form-control" %>
 	                    </div>
 	                </div>
