--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -19,7 +19,7 @@
 				    </div>
 				  	<% end %>
 	                <div class="row">
-						<% if action_name.eql?("edit")%> 
+						<% if action_name.eql?("edit") || action_name.eql?("update")%> 
 	                    <div class="col-sm-3">
 	                        <div class="form-group">
 	                    	    <%= f.label :code, "Classroom Code", :class=>"control-label" %><span class="asterisk">*</span> </br>
